--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,8 @@
 .waves img{
     position: fixed;
     z-index: -10; 
-    width: 1920px;
-    height: 570px;
+    width: 100%;
+    height: 620px;
     object-fit: cover;
     translate: 0px 60px;
 }
@@ -105,6 +105,7 @@
 
 .display-main{
     margin-bottom: -68px;
+    text-align: center;
 }
 .card p{
     padding-top: 2.5px;
